feat: read kml files

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
     <!-- Use container-fluid for 100% width and set padding to 0 -->
     <main role="main" class="container-fluid p-0">
       <div class="space_block">
+        <div class="d-flex align-content-center">
+          <span class="text-white">Control layers:</span>
+          <span class="btn-group">
+              <button type="button" class="btn btn-primary" id="layer-btn-uv-ray">紫外線</button>
+              <button type="button" class="btn btn-primary" id="layer-btn-2">Test 2</button>
+              <button type="button" class="btn btn-primary" id="layer-btn-3">Test 3</button>
+          </span>
+        </div>
+        <div id="tree-controls">
+        </div>
           <!-- Globe -->
           <div id="globe" class="globe">
             <!--.d-block ensures the size is correct (prevents a scrollbar from appearing)-->
