feat: control water layer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <span class="text-white">Control layers:</span>
           <span class="btn-group">
               <button type="button" class="btn btn-primary" id="layer-btn-uv-ray">紫外線</button>
-              <button type="button" class="btn btn-primary" id="layer-btn-2">Test 2</button>
+              <button type="button" class="btn btn-primary" id="layer-btn-water">下水道</button>
               <button type="button" class="btn btn-primary" id="layer-btn-3">Test 3</button>
           </span>
         </div>
