--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link href="./Semantic-UI-CSS-master/semantic.min.css" rel="stylesheet">
   <link href="./css/app.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/chart.css">
 </head>
 
 <body>
@@ -95,7 +96,7 @@
             </p>
             <!-- 數值圖表 -->
             <div class="show_data_box">
-
+                <canvas id="lineChart"></canvas>
             </div>
           </div>
           
@@ -125,8 +126,9 @@
   </main>
 
   <!-- JavaScript is placed at the end of the document so the page loads faster -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+  <script
+    src="https://code.jquery.com/jquery-3.4.1.js"
+    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -136,5 +138,7 @@
     crossorigin="anonymous"></script>
   <script src="https://unpkg.com/worldwindjs@1.5.90/build/dist/worldwind.min.js"></script>
   <script src="./Semantic-UI-CSS-master/semantic.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
   <script src="./src/app.js"></script>
+  <script src="./src/chart.js"></script>
 </body>
