fix:資料欄位樣式調整

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <span>TAIWAN</span>
         </div>
 
-        <button class="ui button city_btn">
+        <button class="ui button city_btn clk">
           基隆市
         </button>
         <button class="ui button city_btn">
@@ -79,8 +79,8 @@
 
       <!-- 視覺化顯示 -->
       <div class="data_block">
-        <a href="#" class="close_btn">
-          &times;
+        <a href="javascript:;" class="close_btn">
+          X
         </a>
         <!-- 內容 -->
         <div class="content_block">
