--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
         </canvas>
       </div>
 
+      <!-- 地圖呈現(遮罩)切換 -->
+      <div class="map_btn_box">
+        <a href="javascript:;" class="map_btn_ctrl" id="map_btn_ctrl">
+          <i class="icon eye"></i>
+        </a>
+        <div class="btn_box">
+          <button type="button" onclick="mapCtrlButton(this,'leaf')"><i class="leaf icon"></i><span>環境空氣品質</span></button>
+          <button type="button" onclick="mapCtrlButton(this,'heartbeat')"><i class="heartbeat icon"></i><span>呼吸道疾病分佈</span></button>
+        </div>
+      </div>
+
+
+      <!-- 地圖呈現(遮罩)切換(end) -->
 
       <!-- 左邊選單 -->
       <div class="left_block">
@@ -140,6 +153,11 @@
   <script src="./src/app.js"></script>
   <script src="./src/chart.js"></script>
   <script>
+    $(function () {
+      $('.map_btn_ctrl').click(function(){
+        $('.map_btn_box').toggleClass('clk');
+      });
+    });
 
     function openDataBox(elem, class_name) {
       $(class_name).removeClass('clk');
@@ -150,13 +168,20 @@
     function closeDataBox(data_box) {
       $(data_box).fadeOut();
     }
+
+    function mapCtrlButton(elem,class_name){
+      $('#map_btn_ctrl').find('i').attr('class',class_name+' icon');
+      // $('#map_btn_ctrl').addClass(class_name+' .icon ');
+      $('.map_btn_box').removeClass('clk');
+    }
+
   </script>
 </body>
 
 <script>
 
   var fragment = document.createDocumentFragment()
-  for(var i =0; i < 500; i++) {
+  for (var i = 0; i < 500; i++) {
     var lightEle = document.createElement('div')
     lightEle.setAttribute('class', 'light')
     fragment.appendChild(lightEle)
