--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
           <div class="data_list">
             <p class="title">
-              <span>空氣污染指數</span>
+              <span>PM2.5</span>
             </p>
             <p class="subtitle">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas aut ducimus molestiae exercitationem
@@ -115,7 +115,7 @@
 
           <div class="data_list">
             <p class="title">
-              <span>空氣污染指數</span>
+              <span>慢性疾病</span>
             </p>
             <p class="subtitle">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas aut ducimus molestiae exercitationem
@@ -124,7 +124,7 @@
             </p>
             <!-- 數值圖表 -->
             <div class="show_data_box">
-                
+                <canvas id="barChart"></canvas>
             </div>
           </div>
 
