feat:跑馬燈效果

--- a/index.html
+++ b/index.html
@@ -46,9 +46,21 @@
           <button type="button" onclick="mapCtrlButton(this,'heartbeat')"><i class="heartbeat icon"></i><span>呼吸道疾病分佈</span></button>
         </div>
       </div>
-
-
       <!-- 地圖呈現(遮罩)切換(end) -->
+
+      <marquee class="marquee_bar">
+        <span>O3(ppb)臭氧</span>
+        <label>8小時 移動平均:58 小時濃度:53 </label>
+        <span>PM2.5(μg/m3)細懸浮微粒</span>
+        <label>移動平均:12 小時濃度:11 </label>
+        <span>PM10(μg/m3)懸浮微粒</span>
+        <label>移動平均:35 小時濃度:32</label>
+        <span>CO(ppm)一氧化碳</span>
+        <label>8小時移動平均:0.20 小時濃度:0.26</label>
+        <span>SO2(ppb)二氧化硫</span>
+        <label>小時濃度:1.6</label>
+      </marquee>
+
 
       <!-- 左邊選單 -->
       <div class="left_block">
