fix:地球畫布大小

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!-- Globe -->
       <div id="globe" class="globe">
         <!--.d-block ensures the size is correct (prevents a scrollbar from appearing)-->
-        <canvas id="globe-canvas-air" class="d-block" style="width: 600px;height: 600px">
+        <canvas id="globe-canvas-air" class="d-block" style="width: 100%;height: 100%">
           Try Chrome or FireFox.
         </canvas>
       </div>
