fix: change texts of layer buttons

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           <i class="icon eye"></i>
         </a>
         <div class="btn_box">
-          <button name="layers" type="button" onclick="mapCtrlButton(this,'leaf')" value="air"><i class="leaf icon"></i><span>環境空氣品質</span></button>
-          <button name="layers" type="button" onclick="mapCtrlButton(this,'heartbeat')" value="disease"><i class="heartbeat icon"></i><span>呼吸道疾病分佈</span></button>
+          <button name="layers" type="button" onclick="mapCtrlButton(this,'leaf')" value="air"><i class="leaf icon"></i><span>皮膚性疾病</span></button>
+          <button name="layers" type="button" onclick="mapCtrlButton(this,'heartbeat')" value="disease"><i class="heartbeat icon"></i><span>呼吸道疾病</span></button>
         </div>
       </div>
       <!-- 地圖呈現(遮罩)切換(end) -->
