fix: change some texts of charts

--- a/index.html
+++ b/index.html
@@ -105,19 +105,17 @@
       <!-- 視覺化顯示 -->
       <div class="data_block">
         <a href="javascript:;" class="close_btn" onclick="closeDataBox('.data_block')">
-          X
+          &times;
         </a>
         <!-- 內容 -->
         <div class="content_block">
 
           <div class="data_list">
             <p class="title">
-              <span>PM2.5</span>
+              <span>Chart of NewAQI</span>
             </p>
             <p class="subtitle">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas aut ducimus molestiae exercitationem
-              rerum ea, reiciendis laudantium nemo. Sit rerum sapiente officia cum maxime repellat qui eius aliquam
-              neque quia.
+              NewAQI vs. Disease
             </p>
             <!-- 數值圖表 -->
             <div class="show_data_box">
@@ -127,12 +125,10 @@
 
           <div class="data_list">
             <p class="title">
-              <span>慢性疾病</span>
+              <span>Histogram of NewAQI</span>
             </p>
             <p class="subtitle">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas aut ducimus molestiae exercitationem
-              rerum ea, reiciendis laudantium nemo. Sit rerum sapiente officia cum maxime repellat qui eius aliquam
-              neque quia.
+              NewAQI vs. Disease
             </p>
             <!-- 數值圖表 -->
             <div class="show_data_box">
